--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.24.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.15"
   },
